Fixed Rocket Shipment video dynamic size adjustment, added bottom margin to content pages to make sure longer pages do not look weirdly cut off, made navigation menu fixed so it does not scroll along with longer pages, fixed bug where mobile navigation menu prevents scrolling to the bottom of the menu when it is partly outside the screen.

--- a/src/components/ContentNavigation.css
+++ b/src/components/ContentNavigation.css
@@ -1,12 +1,9 @@
 @import "../variables.css";
 
 .navigation {
+    position: fixed;
     width: 30%;
     max-width: var(--navigation-max-width);
-}
-
-nav {
-    width: 100%;
 }
 
 span {
@@ -21,7 +18,6 @@ ul, .list-item {
 
 @media (max-width: 700px) {
     .navigation {
-        position: fixed;
         background-color: var(--mobile-menu-bg-color);
         width: 100%;
         height: 100%;
@@ -32,6 +28,6 @@ ul, .list-item {
     }
 
     .navigation.menu-opened {
-        top: var(--menu-bar-total-height);
+        top: 0;
     }
 }
